--- a/src/app/modules/security/forgetpw/forgetpw.component.html
+++ b/src/app/modules/security/forgetpw/forgetpw.component.html
@@ -12,10 +12,10 @@
               <label for="exampleInputEmail1" class="form-label">Email</label>
               <input type="email" class="form-control" name="email" [(ngModel)]="email">
             </div>
-            <button type="button" class="btn btn-info" (click)="forgotPassword()">Send Link</button>
+            <button type="button" class="btn btn-info"(click)="forgotPassword()">Send Link</button>
             <div class="row">
               <div class="col-md-6">
-                <a href="/login" style="text-decoration: none;">Back to <span class="text-danger">Login</span></a>
+                <a href="/security/login" style="text-decoration: none;">Back to <span class="text-danger">Login</span></a>
               </div>
             </div>
           </form>
