logout part done

--- a/src/app/modules/dashboard/components/default/default.component.html
+++ b/src/app/modules/dashboard/components/default/default.component.html
@@ -1,9 +1,11 @@
 <div class="container-fluid">
-
+<button style="margin-left: 1800px;margin-top: 20px" type="button"class="btn btn-info text-center" (click)="register()">SignOut</button>
   <div class="row">
     <div class="col-md-4 mt-5">
+
       <div class="card border-0 shadow p-3">
         <div class="form-floating mb-3 tetx-center">
+
           <h5 class="text-center text-warning">Add Student</h5>
         </div>
         <div class="form-floating mb-3">
